build/log/idf_py_stderr_output_139734
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'handle_post':
/home/pi/wifiRelay_2/main/wifiRelay.c:520:17: error: too many arguments for format [-Werror=format-extra-args]
  520 |     sscanf(buf, "api_user=%[^&]&api_pass=%[^&]&wifi_ssid=%[^&]&wifi_pass=%[^&]&auth_url=%[^&]&switch_url=&switch_name=%s", api_user, api_pass, wifi_ssid,wifi_pass,auth_url, switch_url,switch_name);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
